--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,13 @@ out/
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+ /dist/
+ /nbdist/
+ /.nb-gradle/
 
 ### VS Code ###
 .vscode/
+
+### Spring Boot 환경파일 (민감정보) ###
+backend/src/main/resources/application*.yml
+backend/src/main/resources/application*.yaml
