--- a/.github/workflows/frontend-deploy.yaml
+++ b/.github/workflows/frontend-deploy.yaml
@@ -1,10 +1,10 @@
 name: Deploy Frontend to S3
 
 on:
-  workflow_dispatch: # 원할 때 수동으로 실행
+  workflow_dispatch:
   push:
     branches:
-      - deploy-frontend # 이 브랜치에 push하면 자동 배포도 가능
+      - deploy-frontend
 
 jobs:
   deploy:
@@ -27,10 +27,11 @@ jobs:
 
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
+        env:
+          AWS_S3_BUCKET: ync-library-frontend # ✅ S3 버킷 이름
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} # ✅ 깃허브 시크릿
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-northeast-2
+          SOURCE_DIR: frontend/build # ✅ 업로드할 폴더 경로
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          region: ap-northeast-2
-          source: frontend/build/
-          destination: s3://ync-library-frontend/
-          delete: true
+          args: --acl public-read --follow-symlinks --delete # ✅ 퍼블릭 접근 + 기존파일 삭제
