--- a/.github/workflows/frontend-deploy.yaml
+++ b/.github/workflows/frontend-deploy.yaml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - deploy-frontend
+      - main
+    paths:
+      - "frontend/**"
 
 jobs:
   deploy:
