backend deploy test3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,55 @@
-name: Deploy to EC2
+name: 🚀 Deploy Backend to EC2
 
 on:
   push:
-    branches: ["main"] # main 브랜치에 push 될 때만 동작
+    branches: ["main"] # main 브랜치 푸시 시 배포 실행
+  workflow_dispatch: # GitHub Actions에서 수동 실행도 가능
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: ✅ Checkout repository
         uses: actions/checkout@v4
 
-      - name: Deploy to EC2
+      - name: 🧩 Setup Java 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: 🔧 Deploy to EC2 (via SSH)
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
+          script_stop: true
+          pty: true # ✅ TTY 활성화 (Gradle/Docker 멈춤 방지)
+          timeout: 30m # ✅ 전체 타임아웃 여유
+          command_timeout: 25m # ✅ 개별 명령 타임아웃
           script: |
+            echo "===== 🚀 Deploy Start $(date) ====="
+
+            # 환경 로드 (EC2에서 실행 시 PATH, JAVA_HOME 불러오기)
+            source /etc/profile
+            source ~/.bashrc
+
             cd /home/ubuntu/app/2025JavaProject/backend
-            ./deploy.sh
+
+            echo "> 🧹 Clean up old containers"
+            docker stop library-app || true
+            docker rm library-app || true
+
+            echo "> 🏗️ Build Spring Boot JAR"
+            chmod +x ./gradlew
+            ./gradlew clean bootJar -x test
+
+            echo "> 🐋 Build Docker image"
+            docker build -t library-backend .
+
+            echo "> 🚀 Run new container"
+            docker run -d -p 8080:8080 --name library-app library-backend
+
+            echo "===== ✅ Deploy Complete $(date) ====="
