--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,8 @@ jobs:
           command_timeout: 5m # ✅ 개별 명령 타임아웃
           script: |
             echo "===== 🚀 Deploy Start $(date) ====="
-
-            # 환경 로드 (EC2에서 실행 시 PATH, JAVA_HOME 불러오기)
             source /etc/profile
             source ~/.bashrc
-
             cd /home/ubuntu/app/2025JavaProject/backend
 
             echo "> 🧹 Clean up old containers"
@@ -44,10 +41,10 @@ jobs:
 
             echo "> 🏗️ Build Spring Boot JAR"
             chmod +x ./gradlew
-            ./gradlew clean bootJar -x test --console=plain --no-daemon
+            ./gradlew clean bootJar -x test --console=plain --no-daemon 2>&1 | tee gradle.log
 
             echo "> 🐋 Build Docker image"
-            docker build -t library-backend .
+            docker build -t library-backend . 2>&1 | tee docker.log
 
             echo "> 🚀 Run new container"
             docker run -d -p 8080:8080 --name library-app library-backend
