--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,3 +46,10 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.named('bootJar') {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	from("src/main/resources") {
+		include "application.yml"
+	}
+}
