--- a/.github/workflows/frontend-deploy.yaml
+++ b/.github/workflows/frontend-deploy.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Create .env.production file
         run: |
           cd frontend
-          echo "REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }}" > .env.production
+          echo "REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_URL }}" > .env.production
 
       - name: Install and build
         run: |
