--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: 🚀 Deploy Backend to EC2
 
 on:
   push:
-    branches: ["admin"]
+    branches: ["main"]
   workflow_dispatch: # 수동 실행 가능
 
 jobs:
