--- a/.github/workflows/frontend-deploy.yaml
+++ b/.github/workflows/frontend-deploy.yaml
@@ -1,10 +1,11 @@
 name: Deploy Frontend to S3
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - main
+    branches: ["main"]
+    paths:
+      - "frontend/**"
+  workflow_dispatch:
 
 jobs:
   deploy:
