--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+
 	implementation 'io.jsonwebtoken:jjwt:0.13.0'
 
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
@@ -42,6 +43,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation platform("software.amazon.awssdk:bom:2.25.59")
+	implementation "software.amazon.awssdk:s3"
 }
 
 tasks.named('test') {
